--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "trailingComma": "none"
   },
   "dependencies": {
-    "@mockoon/commons": "1.3.0",
+    "@mockoon/commons": "file:../commons",
+    "@mockoon/commons-server": "file:../commons-server",
     "electron-is-dev": "1.2.0",
     "electron-json-storage": "4.2.0",
     "electron-log": "4.3.1",
